# review-sentiment

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
review_analysis/: __init__.py  api.py  cli.py  loading.py  train.py
review_analysis/datasets/: __init__.py  collate.py  dataset.py  loading.py  tokeniser.py
review_analysis/inference/: __init__.py  deep_bow.py
review_analysis/modules/: __init__.py  deep_bow.py
review_analysis/train/: bow.py  deep_bow.py
review_analysis/trainer/: __init__.py  trainer.py
tests/: test_loading.py
tests/datasets/: test_loading.py  test_tokeniser.py
tests/test_data/: small_test.csv
